# VPlayer

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/app/vplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VPlayerFFmpeg.cpp  VPlayerFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/app/vplayer/: MainActivity.kt  VPlayer.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/app/vplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
